--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-transform-react-jsx": "^7.9.4",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.0",
+    "node-sass": "^4.14.1",
     "react": "^16.9.0",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
@@ -24,7 +25,7 @@
     "eslint-plugin-react-hooks": "^2.2.0",
     "gh-pages": "^2.0.1",
     "jest": "^24.9.0",
-    "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap": "^1.0.1",
     "typescript": "^3.5.3"
   },
   "scripts": {
