--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -36,9 +36,9 @@ pipelines:
           image: node:10.15.0
           deployment: staging
           script:
-            - tar --exclude='./node_modules' --exclude='./build' -czvf application-${BITBUCKET_BUILD_NUMBER}.tar.gz -C .
+            - tar --exclude='./node_modules' --exclude='./build' -czvf archived/application-${BITBUCKET_BUILD_NUMBER}.tar.gz .
             - pipe: atlassian/heroku-deploy:1.1.2
               variables:
                 HEROKU_API_KEY: $HEROKU_API_KEY
                 HEROKU_APP_NAME: $HEROKU_APP_NAME
-                ZIP_FILE: "application-${BITBUCKET_BUILD_NUMBER}.tar.gz"
+                ZIP_FILE: "archived/application-${BITBUCKET_BUILD_NUMBER}.tar.gz"
