Add app routes, links and other components.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,12 +22,11 @@
     "noImplicitAny": true,
     "outDir": "dist"
   },
-  "include": [
-    "src/**/*", "src/__tests__",
-  ],
   "exclude": [
-    "dist",
     "build",
     "node_modules"
+  ],
+  "include": [
+    "src"
   ]
 }
