--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-transform-react-jsx": "^7.9.4",
+    "@types/react-router-dom": "^5.1.5",
     "bootstrap": "^4.5.0",
     "node-sass": "^4.14.1",
     "react": "^16.9.0",
     "react-dom": "^16.8.6",
-    "react-router": "^5.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1"
   },
   "devDependencies": {
