--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-transform-react-jsx": "^7.9.4",
+    "@material-ui/core": "^4.9.14",
+    "@material-ui/icons": "^4.9.1",
+    "@types/material-ui": "^0.21.7",
     "@types/react-router-dom": "^5.1.5",
     "bootstrap": "^4.5.0",
     "node-sass": "^4.14.1",
