--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "VeeTek",
-  "name": "VeeTek",
+  "short_name": "Vee-Tek",
+  "name": "Vee-Tek",
   "icons": [
     {
       "src": "favicon.ico",
