Modify portfolio page style and animation.

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "browserslist": {
     "production": [
       ">0.01%",
+      "not dead",
       "not op_mini all"
     ],
     "development": [
