--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.8.6",
+    "react-parallax": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1"
   },
