Complete Website Landing page.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,6 +8,7 @@ pipelines:
           - npm install
           # - npm test -- --coverage --coverageDirectory=output/coverage/jest  
           # - tar -czvf coverage.tar.gz output/coverage/jest
+          - npm run autoprefix:r
           - npm run build
           - mkdir packaged
           - tar -czvf packaged/package-${BITBUCKET_BUILD_NUMBER}.tar.gz -C build . 
